made game of life in turtle

--- a/1_final_project/makefile
+++ b/1_final_project/makefile
@@ -4,7 +4,7 @@ CFLAGSSDL= `sdl2-config --cflags` -O2 -Wall -Wextra -pedantic -Wfloat-equal -std
 LIDLIBSSDL= `sdl2-config --libs` -lm
 LIDLIBS = -lm
 CC =/usr/local/bin/gcc-10
-INCPARSE = -Iparse
+INCPARSE = -Iparser
 INCINTERP = -Iinterpreter
 INCEXTEN = -Iexten
 
@@ -43,11 +43,11 @@ u_arrays_san: unity_tests/Test_arrays.c src/unity.c src/unity.h $(ARRFULL) $(GEN
 u_arrays_fast: unity_tests/Test_arrays.c src/unity.c src/unity.h $(ARRFULL) $(GENERALFULL)
 	$(CC) unity_tests/Test_arrays.c  src/unity.c $(ARRRUN) $(GENERALRUN) -o u_arrays_fast $(CFLAGSFAST) $(LIDLIBS)
 
-u_parse_san: unity_tests/Test_parser.c src/unity.c src/unity.h $(PARSEFULL) parse/specific.h parse/specific.c $(GENERALFULL)
-	$(CC) unity_tests/Test_parser.c src/unity.c $(PARSERUN) parse/specific.c $(GENERALRUN) -o u_parse_san $(CFLAGSSAN) $(INCPARSE) $(LIDLIBS)
+u_parse_san: unity_tests/Test_parser.c src/unity.c src/unity.h $(PARSEFULL) parser/specific.h parser/specific.c $(GENERALFULL)
+	$(CC) unity_tests/Test_parser.c src/unity.c $(PARSERUN) parser/specific.c $(GENERALRUN) -o u_parse_san $(CFLAGSSAN) $(INCPARSE) $(LIDLIBS)
 
-u_parse_fast: unity_tests/Test_parser.c src/unity.c src/unity.h $(PARSEFULL) parse/specific.h parse/specific.c $(GENERALFULL)
-	$(CC) unity_tests/Test_parser.c src/unity.c $(PARSERUN) parse/specific.c $(GENERALRUN) -o u_parse_fast $(CFLAGSFAST) $(INCPARSE) $(LIDLIBS)
+u_parse_fast: unity_tests/Test_parser.c src/unity.c src/unity.h $(PARSEFULL) parser/specific.h parser/specific.c $(GENERALFULL)
+	$(CC) unity_tests/Test_parser.c src/unity.c $(PARSERUN) parser/specific.c $(GENERALRUN) -o u_parse_fast $(CFLAGSFAST) $(INCPARSE) $(LIDLIBS)
 
 u_test_interp_san: unity_tests/Test_interp.c src/unity.c src/unity.h $(PARSEFULL) $(INTERPFULL) interpreter/specific.c interpreter/specific.h $(STACKSFULL) $(GENERALFULL)
 		$(CC) unity_tests/Test_interp.c src/unity.c interpreter/specific.c  $(PARSERUN) $(INTERPRUN) $(STACKSRUN) $(GENERALRUN) -o u_test_interp_san $(CFLAGSSAN) $(INCINTERP) $(LIDLIBS)
@@ -86,14 +86,14 @@ u_debugger_san:unity_tests/Test_debugger.c src/unity.c src/unity.h debugger_func
 u_debugger_fast:unity_tests/Test_debugger.c src/unity.c src/unity.h debugger_funcs.c debugger_funcs.h    $(PARSEFULL) $(INTERPFULL) interpreter/specific.c interpreter/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL)
 	$(CC) unity_tests/Test_debugger.c src/unity.c debugger_funcs.c   interpreter/specific.c  $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o u_debugger_fast $(CFLAGSFAST) $(INCINTERP) $(LIDLIBS)
 
-parser_san: parser.c $(PARSEFULL) $(GENERALFULL) parse/specific.h parse/specific.c
-	$(CC) parser.c $(PARSERUN) $(GENERALRUN) parse/specific.c  -o parser_san $(CFLAGSSAN) $(INCPARSE) $(LIDLIBS)
+parser_san: parser.c $(PARSEFULL) $(GENERALFULL) parser/specific.h parser/specific.c
+	$(CC) parser.c $(PARSERUN) $(GENERALRUN) parser/specific.c  -o parser_san $(CFLAGSSAN) $(INCPARSE) $(LIDLIBS)
 
 debugger:debugger.c debugger_funcs.c debugger_funcs.h  $(PARSEFULL) $(INTERPFULL) interpreter/specific.c interpreter/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) ADTS_and_general/neillsdl2.c ADTS_and_general/neillsdl2.h
 	$(CC) -DLIVE_VERSION debugger.c debugger_funcs.c  interpreter/specific.c  $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN) ADTS_and_general/neillsdl2.c -o debugger $(CFLAGSSDL) $(INCINTERP) $(LIDLIBSSDL)
 
-parse: parser.c $(PARSEFULL) $(GENERALFULL) parse/specific.h parse/specific.c
-	$(CC) parser.c $(PARSERUN) $(GENERALRUN) parse/specific.c  -o parse $(CFLAGSFAST) $(INCPARSE) $(LIDLIBS)
+parse: parser.c $(PARSEFULL) $(GENERALFULL) parser/specific.h parser/specific.c
+	$(CC) parser.c $(PARSERUN) $(GENERALRUN) parser/specific.c  -o parse $(CFLAGSFAST) $(INCPARSE) $(LIDLIBS)
 
 extension: extension.c extension_master.h extension_funcs.c  extension_funcs.h extension_flow.c extension_flow.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) ADTS_and_general/neillsdl2.c ADTS_and_general/neillsdl2.h extension_arrays.c extension_arrays.h $(ARRFULL)
 	$(CC) -DINTERP_PRODUCTION extension.c extension_funcs.c extension_flow.c exten/specific.c extension_arrays.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN) ADTS_and_general/neillsdl2.c -o extension $(CFLAGSSDL) $(INCEXTEN) $(LIDLIBSSDL)
@@ -114,32 +114,32 @@ run_valgrind: interp extension parse debugger u_debugger_fast u_exten_arr_fast u
 	valgrind --leak-check=full --show-leak-kinds=all ./u_hash_map_fast
 	valgrind --leak-check=full --show-leak-kinds=all ./u_stacks_fast
 	valgrind --leak-check=full --show-leak-kinds=all ./parse
-	valgrind --gen-suppressions=all --suppressions=./linux_sdl_gl.sup --leak-check=full --show-leak-kinds=all ./interp
-	valgrind --gen-suppressions=all --suppressions=./linux_sdl_gl.sup --leak-check=full --show-leak-kinds=all ./extension
+	valgrind --gen-suppressions=all --suppressions=./linux_sdl_gl.sup --leak-check=full --show-leak-kinds=all ./interp ./test_files/test_turtles/interpreter/circle.ttl
+	valgrind --gen-suppressions=all --suppressions=./linux_sdl_gl.sup --leak-check=full --show-leak-kinds=all ./extension ./test_files/test_turtles/interpreter/circle.ttl
 	valgrind --gen-suppressions=all --suppressions=./linux_sdl_gl.sup --leak-check=full --show-leak-kinds=all ./debugger
 
 
 run_tests_report: u_stacks_san u_stacks_fast u_hash_map_san u_hash_map_fast u_arrays_san u_arrays_fast u_parse_san u_parse_fast u_test_interp_san u_test_interp_fast u_exten_func_san u_exten_func_fast u_exten_flow_san u_exten_flow_fast u_exten_arr_san u_exten_arr_fast u_exten_interactions_san u_exten_interactions_fast u_debugger_san u_debugger_fast
-	./u_stacks_san > testing_results.txt
-	./u_stacks_fast >> testing_results.txt
-	./u_hash_map_san >> testing_results.txt
-	./u_hash_map_fast >> testing_results.txt
-	./u_arrays_san >> testing_results.txt
-	./u_arrays_fast >> testing_results.txt
-	./u_parse_san >> testing_results.txt
-	./u_parse_fast >> testing_results.txt
-	./u_test_interp_san >> testing_results.txt
-	./u_test_interp_fast >> testing_results.txt
-	./u_exten_func_san >> testing_results.txt
-	./u_exten_func_fast >> testing_results.txt
-	./u_exten_flow_san >> testing_results.txt
-	./u_exten_flow_fast >> testing_results.txt
-	./u_exten_arr_san >> testing_results.txt
-	./u_exten_arr_fast >> testing_results.txt
-	./u_exten_interactions_san >> testing_results.txt
-	./u_exten_interactions_fast >> testing_results.txt
-	./u_debugger_san >> testing_results.txt
-	./u_debugger_fast >> testing_results.txt
+	./u_stacks_san > ./report_files/testing_results.txt
+	./u_stacks_fast >> ./report_files/testing_results.txt
+	./u_hash_map_san >> ./report_files/testing_results.txt
+	./u_hash_map_fast >> ./report_files/testing_results.txt
+	./u_arrays_san >> ./report_files/testing_results.txt
+	./u_arrays_fast >> ./report_files/testing_results.txt
+	./u_parse_san >> ./report_files/testing_results.txt
+	./u_parse_fast >> ./report_files/testing_results.txt
+	./u_test_interp_san >> ./report_files/testing_results.txt
+	./u_test_interp_fast >> ./report_files/testing_results.txt
+	./u_exten_func_san >> ./report_files/testing_results.txt
+	./u_exten_func_fast >> ./report_files/testing_results.txt
+	./u_exten_flow_san >> ./report_files/testing_results.txt
+	./u_exten_flow_fast >> ./report_files/testing_results.txt
+	./u_exten_arr_san >> ./report_files/testing_results.txt
+	./u_exten_arr_fast >> ./report_files/testing_results.txt
+	./u_exten_interactions_san >> ./report_files/testing_results.txt
+	./u_exten_interactions_fast >> ./report_files/testing_results.txt
+	./u_debugger_san >> ./report_files/testing_results.txt
+	./u_debugger_fast >> ./report_files/testing_results.txt
 
 
 run_tests: u_stacks_san u_stacks_fast u_hash_map_san u_hash_map_fast u_arrays_san u_arrays_fast u_parse_san u_parse_fast u_test_interp_san u_test_interp_fast u_exten_func_san u_exten_func_fast u_exten_flow_san u_exten_flow_fast u_exten_arr_san u_exten_arr_fast u_exten_interactions_san u_exten_interactions_fast u_debugger_san u_debugger_fast
@@ -166,27 +166,27 @@ run_tests: u_stacks_san u_stacks_fast u_hash_map_san u_hash_map_fast u_arrays_sa
 
 
 #runs a series of invalid files and stores error message in p_errors.txt the | true stops the makefile from terminating after seeing an error
-run_parser_err: parser
-	echo "test_files/test_turtles/parser/invalid/bad_spacing.ttl" > p_errors.txt
-	./parser test_files/test_turtles/parser/invalid/bad_spacing.ttl 2>> p_errors.txt | true
-	echo "test_files/test_turtles/parser/invalid/invalid_command.ttl" >> p_errors.txt
-	./parser test_files/test_turtles/parser/invalid/invalid_command.ttl 2>>p_errors.txt | true
-	echo "test_files/test_turtles/parser/invalid/missing_bracket.ttl" >> p_errors.txt
-	./parser test_files/test_turtles/parser/invalid/missing_bracket.ttl 2>> p_errors.txt |true
-	echo "test_files/test_turtles/parser/invalid/invalid_do.ttl" >> p_errors.txt
-	./parser test_files/test_turtles/parser/invalid/invalid_do.ttl 2>> p_errors.txt | true
-	echo "test_files/test_turtles/parser/invalid/invalid_nested_loop.ttl" >> p_errors.txt
-	./parser test_files/test_turtles/parser/invalid/invalid_nested_loop.ttl 2>> p_errors.txt | true
-	echo "test_files/test_turtles/parser/invalid/invalid_set.ttl" >> p_errors.txt
-	./parser test_files/test_turtles/parser/invalid/invalid_set.ttl 2>> p_errors.txt | true
-	echo "test_files/test_turtles/parser/invalid/invalid_set_2.ttl" >> p_errors.txt
-	./parser test_files/test_turtles/parser/invalid/invalid_set_2.ttl 2>> p_errors.txt | true
-	echo "test_files/test_turtles/parser/invalid/text_after_main.ttl" >> p_errors.txt
-	./parser test_files/test_turtles/parser/invalid/text_after_main.ttl 2>> p_errors.txt | true
+run_parser_err: parse
+	echo "test_files/test_turtles/parser/invalid/bad_spacing.ttl" > ./report_files/p_errors.txt
+	./parser test_files/test_turtles/parser/invalid/bad_spacing.ttl 2>> ./report_files/p_errors.txt | true
+	echo "test_files/test_turtles/parser/invalid/invalid_command.ttl" >> ./report_files/p_errors.txt
+	./parser test_files/test_turtles/parser/invalid/invalid_command.ttl 2>> ./report_files/p_errors.txt | true
+	echo "test_files/test_turtles/parser/invalid/missing_bracket.ttl" >> ./report_files/p_errors.txt
+	./parser test_files/test_turtles/parser/invalid/missing_bracket.ttl 2>> ./report_files/p_errors.txt |true
+	echo "test_files/test_turtles/parser/invalid/invalid_do.ttl" >> ./report_files/p_errors.txt
+	./parser test_files/test_turtles/parser/invalid/invalid_do.ttl 2>> ./report_files/p_errors.txt | true
+	echo "test_files/test_turtles/parser/invalid/invalid_nested_loop.ttl" >> ./report_files/p_errors.txt
+	./parser test_files/test_turtles/parser/invalid/invalid_nested_loop.ttl 2>> ./report_files/p_errors.txt | true
+	echo "test_files/test_turtles/parser/invalid/invalid_set.ttl" >> ./report_files/p_errors.txt
+	./parser test_files/test_turtles/parser/invalid/invalid_set.ttl 2>> ./report_files/p_errors.txt | true
+	echo "test_files/test_turtles/parser/invalid/invalid_set_2.ttl" >> ./report_files/p_errors.txt
+	./parser test_files/test_turtles/parser/invalid/invalid_set_2.ttl 2>> ./report_files/p_errors.txt | true
+	echo "test_files/test_turtles/parser/invalid/text_after_main.ttl" >> ./report_files/p_errors.txt
+	./parser test_files/test_turtles/parser/invalid/text_after_main.ttl 2>> ./report_files/p_errors.txt | true
 
 
 
-run_parser_val: parser
+run_parser_val: parse
 	./parser test_files/test_turtles/parser/valid/adding_loops.ttl
 	./parser test_files/test_turtles/parser/valid/more_do.ttl
 	./parser test_files/test_turtles/parser/valid/nested_loops.ttl
@@ -197,42 +197,42 @@ run_parser_val: parser
 
 
 run_interp_err: interp
-	echo "test_files/test_turtles/interpreter/invalid/no_nums.ttl" > i_errors.txt
-	./interp test_files/test_turtles/interpreter/invalid/no_nums.ttl 2>> i_errors.txt | true
-	echo "test_files/test_turtles/interpreter/invalid/too_many_nums.ttl" >> i_errors.txt
-	./interp test_files/test_turtles/interpreter/invalid/too_many_nums.ttl 2>> i_errors.txt | true
-	echo "test_files/test_turtles/interpreter/invalid/unset_var.ttl" >> i_errors.txt
-	./interp test_files/test_turtles/interpreter/invalid/unset_var.ttl 2>> i_errors.txt | true
-	 echo "test_files/test_turtles/parser/invalid/invalid_nested_loop.ttl" >> i_errors.txt
-	./interp test_files/test_turtles/parser/invalid/invalid_nested_loop.ttl 2>> i_errors.txt | true
-	echo "test_files/test_turtles/parser/invalid/invalid_set.ttl" >> i_errors.txt
-	./interp test_files/test_turtles/parser/invalid/invalid_set.ttl 2>> i_errors.txt | true
+	echo "test_files/test_turtles/interpreter/invalid/no_nums.ttl" > ./report_files/i_errors.txt
+	./interp test_files/test_turtles/interpreter/invalid/no_nums.ttl 2>> ./report_files/i_errors.txt | true
+	echo "test_files/test_turtles/interpreter/invalid/too_many_nums.ttl" >> ./report_files/i_errors.txt
+	./interp test_files/test_turtles/interpreter/invalid/too_many_nums.ttl 2>> ./report_files/i_errors.txt | true
+	echo "test_files/test_turtles/interpreter/invalid/unset_var.ttl" >> ./report_files/i_errors.txt
+	./interp test_files/test_turtles/interpreter/invalid/unset_var.ttl 2>> ./report_files/i_errors.txt | true
+	 echo "test_files/test_turtles/parser/invalid/invalid_nested_loop.ttl" >> ./report_files/i_errors.txt
+	./interp test_files/test_turtles/parser/invalid/invalid_nested_loop.ttl 2>> ./report_files/i_errors.txt | true
+	echo "test_files/test_turtles/parser/invalid/invalid_set.ttl" >> ./report_files/i_errors.txt
+	./interp test_files/test_turtles/parser/invalid/invalid_set.ttl 2>> ./report_files/i_errors.txt | true
 
 run_extension_err:extension
-	echo "test_files/test_turtles/extension/invalid/no_arguments.ttl" > ext_errors.txt
-	./extension test_files/test_turtles/extension/invalid/no_arguments.ttl 2>> ext_errors.txt | true
-	echo "test_files/test_turtles/extension/invalid/too_many_args.ttl" >> ext_errors.txt
-	./extension test_files/test_turtles/extension/invalid/too_many_args.ttl 2>> ext_errors.txt | true
-	echo "test_files/test_turtles/extension/invalid/unknown_func.ttl" >> ext_errors.txt
-	./extension test_files/test_turtles/extension/invalid/unknown_func.ttl 2>> ext_errors.txt | true
-	echo "test_files/test_turtles/extension/invalid/same_var.ttl" >> ext_errors.txt
-	./extension test_files/test_turtles/extension/invalid/same_var.ttl 2>> ext_errors.txt | true
-	echo "./extension test_files/test_turtles/extension/invalid/unknown_array.ttl" >> ext_errors.txt
-	./extension test_files/test_turtles/extension/invalid/unknown_array.ttl 2>> ext_errors.txt | true
-	echo "./extension test_files/test_turtles/extension/invalid/invalid_array_name.ttl" >> ext_errors.txt
-	./extension test_files/test_turtles/extension/invalid/invalid_array_name.ttl 2>> ext_errors.txt | true
-	echo "./extension test_files/test_turtles/extension/invalid/too_big.ttl" >> ext_errors.txt
-	./extension test_files/test_turtles/extension/invalid/too_big.ttl 2>> ext_errors.txt | true
-	echo "./extension test_files/test_turtles/extension/invalid/negative_ind.ttl" >> ext_errors.txt
-	./extension test_files/test_turtles/extension/invalid/negative_ind.ttl 2>> ext_errors.txt | true
-	echo "./extension test_files/test_turtles/extension/invalid/decimal_ind.ttl" >> ext_errors.txt
-	./extension test_files/test_turtles/extension/invalid/decimal_ind.ttl 2>> ext_errors.txt | true
-	echo "./extension test_files/test_turtles/extension/invalid/invalid_file.ttl" >> ext_errors.txt
-	./extension test_files/test_turtles/extension/invalid/invalid_file.ttl 2>> ext_errors.txt | true
-	echo "./extension test_files/test_turtles/extension/invalid/wrong_format_file.ttl" >> ext_errors.txt
-	./extension test_files/test_turtles/extension/invalid/wrong_format_file.ttl 2>> ext_errors.txt | true
-	echo "./extension test_files/test_turtles/extension/invalid/non_existant_file.ttl" >> ext_errors.txt
-	./extension test_files/test_turtles/extension/invalid/non_existant_file.ttl 2>> ext_errors.txt | true
+	echo "test_files/test_turtles/extension/invalid/no_arguments.ttl" > ./report_files/ext_errors.txt
+	./extension test_files/test_turtles/extension/invalid/no_arguments.ttl 2>> ./report_files/ext_errors.txt | true
+	echo "test_files/test_turtles/extension/invalid/too_many_args.ttl" >> ./report_files/ext_errors.txt
+	./extension test_files/test_turtles/extension/invalid/too_many_args.ttl 2>> ./report_files/ext_errors.txt | true
+	echo "test_files/test_turtles/extension/invalid/unknown_func.ttl" >> ./report_files/ext_errors.txt
+	./extension test_files/test_turtles/extension/invalid/unknown_func.ttl 2>> ./report_files/ext_errors.txt | true
+	echo "test_files/test_turtles/extension/invalid/same_var.ttl" >> ./report_files/ext_errors.txt
+	./extension test_files/test_turtles/extension/invalid/same_var.ttl 2>> ./report_files/ext_errors.txt | true
+	echo "./extension test_files/test_turtles/extension/invalid/unknown_array.ttl" >> ./report_files/ext_errors.txt
+	./extension test_files/test_turtles/extension/invalid/unknown_array.ttl 2>> ./report_files/ext_errors.txt | true
+	echo "./extension test_files/test_turtles/extension/invalid/invalid_array_name.ttl" >> ./report_files/ext_errors.txt
+	./extension test_files/test_turtles/extension/invalid/invalid_array_name.ttl 2>> ./report_files/ext_errors.txt | true
+	echo "./extension test_files/test_turtles/extension/invalid/too_big.ttl" >> ./report_files/ext_errors.txt
+	./extension test_files/test_turtles/extension/invalid/too_big.ttl 2>> ./report_files/ext_errors.txt | true
+	echo "./extension test_files/test_turtles/extension/invalid/negative_ind.ttl" >> ./report_files/ext_errors.txt
+	./extension test_files/test_turtles/extension/invalid/negative_ind.ttl 2>> ./report_files/ext_errors.txt | true
+	echo "./extension test_files/test_turtles/extension/invalid/decimal_ind.ttl" >> ./report_files/ext_errors.txt
+	./extension test_files/test_turtles/extension/invalid/decimal_ind.ttl 2>> ./report_files/ext_errors.txt | true
+	echo "./extension test_files/test_turtles/extension/invalid/invalid_file.ttl" >> ./report_files/ext_errors.txt
+	./extension test_files/test_turtles/extension/invalid/invalid_file.ttl 2>> ./report_files/ext_errors.txt | true
+	echo "./extension test_files/test_turtles/extension/invalid/wrong_format_file.ttl" >> ./report_files/ext_errors.txt
+	./extension test_files/test_turtles/extension/invalid/wrong_format_file.ttl 2>> ./report_files/ext_errors.txt | true
+	echo "./extension test_files/test_turtles/extension/invalid/non_existant_file.ttl" >> ./report_files/ext_errors.txt
+	./extension test_files/test_turtles/extension/invalid/non_existant_file.ttl 2>> ./report_files/ext_errors.txt | true
 
 clean:
 	rm -f u_stacks_san u_stacks_fast u_hash_map_san u_hash_map_fast u_arrays_san u_arrays_fast u_parse_san u_parse_fast u_test_interp_san u_test_interp_fast u_exten_func_san u_exten_func_fast u_exten_flow_san u_exten_flow_fast u_exten_arr_san u_exten_arr_fast u_exten_interactions_san u_exten_interactions_fast u_debugger_san u_debugger_fast interp extension parser debugger
